<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ressuscitou</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=br.org.cn.ressuscitou</string>
    <string name="msg_url">https://raw.githubusercontent.com/otaviogrrd/Ressuscitou_Android/master/messages.txt</string>
    <string name="link_url">https://raw.githubusercontent.com/otaviogrrd/Ressuscitou_Android/master/links.txt</string>
    <string name="audios_url">https://raw.githubusercontent.com/otaviogrrd/Ressuscitou_Android/master/audios/</string>
    <string name="cantos_versao">https://raw.githubusercontent.com/otaviogrrd/Ressuscitou_Android/master/cantos_versao.txt</string>
    <string name="cantos_json">https://raw.githubusercontent.com/otaviogrrd/Ressuscitou_Android/master/cantos.json</string>
    <string name="app_lang">pt</string>
    <!-- Botões main -->
    <string name="buttonIndiceAlf">Índice Alfabético</string>
    <string name="buttonIndiceLit">Índice Litúrgico</string>
    <string name="buttonAcord">Acordes</string>
    <string name="buttonArpejos">Arpejos</string>
    <string name="buttonLit">Liturgia</string>
    <string name="buttonList">Listas</string>
    <string name="buttonLista">Listas Personalizadas</string>
    <string name="buttonElec">Eleição</string>
    <string name="buttonCat">Catecumenato</string>
    <string name="buttonPrecat">Pré-Catecumenato</string>
    <!-- Alert Dialog Main -->
    <string name="subtitle">Cantos do Caminho Neocatecumenal</string>
    <string name="terms">ATENÇÃO\n
				         Este aplicativo NÃO pode ser utilizado em nenhuma celebração,
				         deve ser utilizado apenas como apoio aos salmistas 
				         para ensaios, consultas e preparações.</string>
    <string name="version">Uma nova versão do Ressuscitou está disponível, deseja baixar agora?</string>
    <string name="versao">Versão: </string>
    <string name="mensagens">Mensagens: </string>
    <string name="updateLater">Lembrar Depois</string>
    <string name="updateNow">Atualizar Agora</string>
    <string name="atuaCantos">Atualizando os Cantos...</string>
    <string name="atuaCantosOk">A lista de Cantos foi Atualizada!</string>

    <!-- Config texts -->
    <string name="config">Configurações</string>
    <string name="wifiOnly">Apenas Redes Wi-Fi\n Selecione para não usar Dados Móveis</string>
    <string name="extTxt">Modo Estendido\n Exibe o refrão completo dos cantos substituindo as reticências (…) e as barras de BIS</string>
    <string name="escalaAmericanaTxt">Cifras Americanas\n (Do,Re,Mi,Fa,Sol,La,Si, viram: C,D,E,F,G,A,B)</string>
    <string name="numeracao2015Txt">Numeração dos cantos conforme Edição 2015</string>
    <string name="tom">Descubra seu Tom</string>
    <string name="limpar">Apagar Transposições Salvas</string>
    <string name="eraseText">Transposições salvas apagadas</string>
    <string name="deletedAudio">Cantos apagados</string>
    <string name="downlAll">Baixar todos os Áudios\n Somente com Wi-Fi(Aprox.920Mb)</string>
    <string name="startDownAll">Analisando os cantos a serem baixados</string>
    <string name="startDownAll2">Iniciando o download de:</string>
    <string name="startDownAll3">cantos.</string>
    <string name="todosBaixados">Todos cantos já baixados!</string>
    <string name="selecAUD">Selecionar MP3</string>
    <string name="listaAudio">Lista dos áudios baixados\n Apagar para liberar espaço em disco</string>
    <!-- transpor -->
    <string name="t01">Do/Do-</string>
    <string name="t02">Do#/Do#-</string>
    <string name="t03">Re/Re-</string>
    <string name="t04">Mib</string>
    <string name="t05">Mi/Mi-</string>
    <string name="t06">Fa/Fa-</string>
    <string name="t07">Fa#/Fa#-</string>
    <string name="t08">Sol/Sol-</string>
    <string name="t09">Sol#/Sol#-</string>
    <string name="t10">La/La-</string>
    <string name="t11">Sib/Sib-</string>
    <string name="t12">Si/Si-</string>
    <string name="a01">C/Cm</string>
    <string name="a02">C#/C#m</string>
    <string name="a03">D/Dm</string>
    <string name="a04">Eb/Ebm</string>
    <string name="a05">E/Em</string>
    <string name="a06">F/Fm</string>
    <string name="a07">F#/F#m</string>
    <string name="a08">G/Gm</string>
    <string name="a09">G#/G#m</string>
    <string name="a10">A/Am</string>
    <string name="a11">Bb/Bbm</string>
    <string name="a12">B/Bm</string>
    <string name="tSalv">Salvar</string>
    <string name="tRest">Original</string>
    <!-- Download -->
    <string name="noWifi">Sem conexão Wi-Fi</string>
    <string name="noConection">Sem conexão de Internet</string>
    <string name="usingData">Sem Wi-Fi, usando Dados Móveis</string>
    <string name="downTxt">Baixando Áudio</string>
    <string name="downSuc">Download finalizado</string>
    <string name="downErr">Erro no Download</string>
    <string name="conErr">Sem conexão com o servidor</string>
    <string name="finaliz">Finalizado</string>
    <string name="spaceErr">Sem espaço em disco</string>
    <!-- Search -->
    <string name="searchHint">Buscar…</string>
    <!-- Lista -->
    <string name="listaPersonal">Criar Lista</string>
    <string name="nao_existe_lista">Crie uma lista.</string>
    <string name="crie_uma_lista">Não existem listas, crie uma.</string>
    <string name="nome_lista">Nome da Lista:</string>
    <string name="escolha_lista">Escolha uma lista:</string>
    <string name="escolha_lista2">Adicionar à uma lista existente</string>
    <string name="lista_vazia">Lista não contém cantos, adicione cantos!</string>
    <string name="ja_na_lista">Canto já existe na lista!</string>
    <string name="ja_existe">Lista já existe, escolha outro nome!</string>
    <string name="adicionadoalista">Canto adicionado a lista com sucesso!</string>
    <string name="compartilhar_lista">Compartilhar Lista</string>
    <string name="compartilhar_msg">Confira a lista que criei no App *Ressucitou*:\n\n</string>
    <string name="confirmacao">Confirmação</string>
    <string name="confirm_dele_list">Tem certeza que deseja excluir a lista:\n</string>
    <!--others -->
    <string name="saved">Salvo</string>
    <string name="transpo">Transposição</string>
    <string name="capo">Braçadeira</string>
    <string name="traste">Traste</string>

</resources>