<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ActivityMain" >

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:src="@drawable/bttnoption" />
        
        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:src="@drawable/bttninfo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="275dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:background="@drawable/banner"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" >

                    <Button
                        android:id="@+id/buttonIndiceAlf"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonIndiceAlf"
                        android:text="@string/buttonIndiceAlf" />

                    <Button
                        android:id="@+id/buttonIndiceLit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonIndiceLit"
                        android:text="@string/buttonIndiceLit" />

                    <View
                        android:id="@+id/linha1"
                        android:layout_width="250dp"
                        android:layout_height="3.0dip"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#ff0000" />

                    <Button
                        android:id="@+id/buttonPrecat"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonPrecat"
                        android:text="@string/buttonPrecat" />

                    <Button
                        android:id="@+id/buttonCat"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonCat"
                        android:text="@string/buttonCat" />

                    <Button
                        android:id="@+id/buttonElec"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonElec"
                        android:text="@string/buttonElec" />

                    <Button
                        android:id="@+id/buttonLit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:onClick="buttonLit"
                        android:text="@string/buttonLit" />

                    <View
                        android:id="@+id/linha2"
                        android:layout_width="250dp"
                        android:layout_height="3.0dip"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#ff0000" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/buttonAcord"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:onClick="buttonAcord"
                            android:text="@string/buttonAcord" />

                        <Button
                            android:id="@+id/buttonArpejos"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:onClick="buttonArpejos"
                            android:text="@string/buttonArpejos" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/banner2"
                    android:layout_width="275dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/banner2"
                    android:scaleType="fitCenter" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>